# artifacts/api-server/src/routes/index.ts
@@ -2,7 +2,6 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import alunosRouter from "./alunos";
-import disciplinasRouter from "./disciplinas";
 import turmasRouter from "./turmas";
 import chamadasRouter from "./chamadas";
 import retencaoRouter from "./retencao";
@@ -18,7 +17,6 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(importsRouter);
 router.use(alunosRouter);
-router.use(disciplinasRouter);
 router.use(turmasRouter);
 router.use(chamadasRouter);
 router.use(retencaoRouter);
